k8s/apps/vikunja/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vikunja
  labels:
    managed-by: argocd
    purpose: household-service
